--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <!-- <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"> -->
     <!-- <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css"> -->
-
+    
 </head>
 
 <body>
-    <div id="hideMeAfter3Seconds">
+    <div id="hideMeAfter3Seconds"> <!--akshdjboauif-->
         <div class="loading loading--full-height"></div>
     </div>
 
