--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div id="hideMeAfter3Seconds"> <!--akshdjboauif-->
+    <div id="hideMeAfter3Seconds"> 
         <div class="loading loading--full-height"></div>
     </div>
 
