--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"> -->
-    <!-- <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css"> -->
+   <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css"> 
+    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">
     
 </head>
 
@@ -159,7 +159,7 @@
         </div>
     </footer>
 
-
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
     <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
     <script src="script.js"></script>
     <script src="script-listing.js"></script>
